MCKIN-13303 - Brightcove CC alignment fix (#322)

--- a/lms/static/sass/xblocks/brightcov.scss
+++ b/lms/static/sass/xblocks/brightcov.scss
@@ -251,6 +251,8 @@
 .bc-player-default_default .vjs-menu-button-popup .vjs-menu .vjs-menu-content {
     font-size: .9em;
     margin: 0;
+    left: auto;
+    right: 30px;
 }
 
 // if video is found inside the xBlock
